--- a/.github/workflows/aws-lambda.yml
+++ b/.github/workflows/aws-lambda.yml
@@ -16,18 +16,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.12'  # Specify your Python version
-
-#      - name: Install dependencies
-#        run: |
-#          cd Python
-#          python -m pip install --upgrade pip
-#          pip install -r requirements.txt
+          python-version: '3.12'
 
       - name: Zip Lambda function
         run: |
           cd Python
           zip -r ../lambda_function.zip .
+          cd ..
 
       - name: Upload Lambda function to AWS
         env:
@@ -36,3 +31,4 @@ jobs:
           AWS_REGION: eu-north-1
         run: |
           aws lambda update-function-code --function-name Sudoku --zip-file fileb://lambda_function.zip
+
