--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,17 @@
         "--follow-imports=silent",
         "--show-column-numbers"
     ],
-    "mypy.enabled": true
+    "mypy.enabled": true,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./Python",
+        "-p",
+        "test_*.py"
+    ],
+    "python.testing.pytestEnabled": true,
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestArgs": [
+        "Python"
+    ]
 }
