--- a/.github/workflows/aws-lambda.yml
+++ b/.github/workflows/aws-lambda.yml
@@ -22,7 +22,9 @@ jobs:
         run: |
           python -m venv .venv
           source .venv/bin/activate
+          cd Python
           pip install -r requirements.txt
+          cd..
 
       - name: Zip Lambda function
         run: |
