--- a/.github/workflows/aws-lambda.yml
+++ b/.github/workflows/aws-lambda.yml
@@ -28,9 +28,8 @@ jobs:
           
       - name : Run tests 
         run : |
-          cd Python
+          pip install pytest
           pytest
-          cd ..
         
       - name: Zip Lambda function
         run: |
