--- a/.github/workflows/aws-lambda.yml
+++ b/.github/workflows/aws-lambda.yml
@@ -38,21 +38,32 @@ jobs:
           zip -r ../lambda_function.zip *
           cd ..
 
-      - name: Upload Lambda package to S3
+      - name: Upload Lambda function to AWS
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: eu-north-1
         run: |
-          aws s3 cp lambda_function.zip s3://sudoku-repo/lambda_function.zip
-
-      - name: Update Lambda function with S3 package
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: eu-north-1
-        run: |
+          aws lambda update-function-code --function-name Sudoku --zip-file fileb://lambda_function.zip
           aws lambda update-function-code \
             --function-name Sudoku \
             --s3-bucket sudoku-repo \
             --s3-key lambda_function.zip
+
+      - name: Prepare and publish a Lambda Layer for ortools
+        run: |
+          mkdir layer
+          cd layer
+          python -m venv layer-env
+          source layer-env/bin/activate
+          mkdir ortools_py
+          pip install ortools -t python/lib/python3.12/site-packages/
+          deactivate
+          zip -r ortools_layer.zip ortools_py
+          aws lambda publish-layer-version --layer-name ortools-layer --zip-file fileb://ortools_layer.zip --compatible-runtimes python3.12
+      
+      - name: Update Lambda function configuration to use the Layer
+        run: |
+          LAYER_VERSION_ARN=$(aws lambda list-layer-versions --layer-name ortools-layer --query 'LayerVersions[0].LayerVersionArn' --output text)
+          aws lambda update-function-configuration --function-name Sudoku --layers $LAYER_VERSION_ARN
+
