--- a/Python/requirements-ortools.txt
+++ b/Python/requirements-ortools.txt
@@ -1,9 +1,9 @@
 # absl-py==2.1.0
 # immutabledict==4.2.0
 # ortools==9.10.4067
-pandas==2.2.2
+# pandas==2.2.2
 # protobuf==5.26.1
 # python-dateutil==2.9.0.post0
 # pytz==2024.1
 # six==1.16.0
-# tzdata==2024.1
+tzdata==2024.1
