--- a/.github/workflows/aws-lambda.yml
+++ b/.github/workflows/aws-lambda.yml
@@ -18,13 +18,14 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install dependencies
-        run: |
-          python -m venv .venv
-          source .venv/bin/activate
-          cd Python
-          pip install --target=Python -r requirements.txt
-          cd ..
+# now all done manually
+#      - name: Install dependencies
+#        run: |
+#          python -m venv .venv
+#          source .venv/bin/activate
+#          cd Python
+#          pip install --target=Python -r requirements.txt
+#          cd ..
 
 # current have package issues, will investigate later          
 #      - name : Run tests 
